--- a/Makefile9
+++ b/Makefile9
@@ -1,7 +1,7 @@
-TARGETS=server client
+TARGETS=guess-mt
 SRCS=$(patsubst %,%.c,$(TARGETS))
 CC=gcc
-CFLAGS= -Wall -g -pthread -Wextra -std=gnu99
+CFLAGS= -Wall -g -pthread -std=c99 
 
 all : $(TARGETS)
 
@@ -10,6 +10,3 @@ $(TARGETS): %: %.c
 
 clean: 
 	@rm -f $(TARGETS) *.o a.out 
-
-sub: 
-	@zip $${PWD##*/}.zip $(SRCS) Makefile
